name:                hyperion
version:             0.1.0.0
synopsis:            Next generation microbenchmarking.
description:         Please see README.md
homepage:            https://github.com/tweag/hyperion#readme
author:              Tweag I/O
maintainer:          m@tweag.io
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Hyperion
    Hyperion.Benchmark
    Hyperion.Internal
    Hyperion.Measurement
    Hyperion.Run
  build-depends:
    base >= 4.9 && < 5,
    clock >= 0.7.2,
    deepseq >= 1.4,
    exceptions >= 0.8,
    mtl >= 2.2,
    random >= 1.1,
    random-shuffle >= 0.0.4,
    text >= 1.2,
    unordered-containers >= 0.2,
    vector >= 0.11
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/tweag/hyperion
