name:                hyperion
version:             0.1.0.0
synopsis:            Reliable performance measurement with robust data export.
description:         Please see README.md
homepage:            https://github.com/tweag/hyperion#readme
author:              Tweag I/O
maintainer:          nicolas.mattia@tweag.io
license:             BSD3
license-file:        LICENSE
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/tweag/hyperion

library
  hs-source-dirs: src
  exposed-modules:
    Hyperion
    Hyperion.Analysis
    Hyperion.Benchmark
    Hyperion.Internal
    Hyperion.Main
    Hyperion.Measurement
    Hyperion.PrintReport
    Hyperion.Report
    Hyperion.Run
  other-modules:
    Paths_hyperion
  build-depends:
    aeson >= 0.11,
    ansi-wl-pprint,
    base >= 4.9 && < 5,
    bytestring >= 0.10,
    containers >= 0.5,
    clock >= 0.7.2,
    deepseq >= 1.4,
    directory,
    exceptions >= 0.8,
    filepath,
    generic-deriving >= 1.11,
    hashable,
    lens >= 4.0,
    mtl >= 2.2,
    optparse-applicative >= 0.12,
    random >= 1.1,
    random-shuffle >= 0.0.4,
    statistics >= 0.13,
    text >= 1.2,
    time >= 1.0,
    unordered-containers >= 0.2,
    vector >= 0.11
  default-language: Haskell2010
  ghc-options:         -Wall

executable hyperion-micro-benchmark-example
  hs-source-dirs:      examples
  main-is:             micro-benchmarks.hs
  build-depends:
    base,
    hyperion,
    process
  default-language:    Haskell2010
  ghc-options:         -Wall

executable hyperion-end-to-end-benchmark-example
  hs-source-dirs:      examples
  main-is:             end-to-end-benchmarks.hs
  build-depends:
    base,
    hyperion,
    process
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite spec
  type:
    exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    Hyperion.BenchmarkSpec
    Hyperion.MainSpec
    Spec
  build-depends:
    base,
    hspec >= 2.2,
    hyperion,
    lens,
    QuickCheck >= 2.8,
    text,
    unordered-containers >= 0.2
  default-language: Haskell2010
